# src/service/contracts/openapi/audit.json
@@ -466,6 +466,9 @@
                     "after_summary": {
                         "type": "object"
                     },
+                    "application_id": {
+                        "type": "string"
+                    },
                     "before_summary": {
                         "type": "object"
                     },
@@ -523,6 +526,9 @@
                         "type": "string"
                     },
                     "actor_type": {
+                        "type": "string"
+                    },
+                    "application_id": {
                         "type": "string"
                     },
                     "max_records": {
@@ -615,6 +621,9 @@
                     "actor_type": {
                         "type": "string"
                     },
+                    "application_id": {
+                        "type": "string"
+                    },
                     "occurred_from": {
                         "type": "string"
                     },
@@ -668,6 +677,9 @@
                     },
                     "after_summary": {
                         "type": "object"
+                    },
+                    "application_id": {
+                        "type": "string"
                     },
                     "before_summary": {
                         "type": "object"
